# noria-server

./: Cargo.toml  README.md
src/: main.rs
src/operators/: aggregation.rs  innerjoin.rs  leaf.rs  mod.rs  operation.rs  projection.rs  root.rs  selection.rs
src/types/: changetype.rs  datatype.rs  functype.rs  mod.rs  operatortype.rs  permissiontype.rs  schematype.rs
src/units/: change.rs  mod.rs  row.rs  serverchange.rs
src/viewsandgraphs/: dfg.rs  mod.rs  serverinfo.rs  view.rs
